# gem-coder

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  gemcoder.yaml  pyproject.toml
.gemcoder/skills/: repo-navigation.md  safe-patch.md  test-driven-fix.md
docs/: PRD.md  demo-60s.md  demo.md  harness.md  orchestrator.md  platform-decision.md  tui.md
src/gemcoder/: __init__.py  config.py  events.py  google_sources.py  harness.py  local_agent.py  managed.py  orchestrator.py  patcher.py  repo_snapshot.py  serve.py  shell.py  smoke.py  task_packet.py  templates.py  verify.py
src/gemcoder/cli/: __init__.py  main.py
tests/: test_cancel.py  test_cli_json.py  test_managed_extract.py  test_orchestrator.py  test_patcher.py  test_scaffold.py  test_serve.py  test_shell.py  test_smoke.py
tui/: go.mod  go.sum
tui/cmd/gemcoder-tui/: main.go
tui/internal/model/: render.go  root.go  root_test.go
tui/internal/rpc/: client.go
tui/internal/styles/: styles.go
