[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemcoder"
version = "0.1.0"
description = "Optimisable CLI/TUI coding harness for Gemini Managed Agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Superagentic AI" }
]
dependencies = [
  "google-genai>=2.0",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
tui = [
  "textual>=0.86",
]

[project.scripts]
gemcoder = "gemcoder.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gemcoder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
